# webb

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rfesi
.github/workflows/: rust.yml
assets/: server.html
src/: auth_service.rs  database.rs  esi.rs  eve_auth.rs  lib.rs  manager.rs  objects.rs  user.rs
src/esi/: data.rs  player_database.rs
tests/: database.rs  esi_manager.rs  tests_database.rs  tests_esi.rs
tests/databases/: char0.db
