[package]
name = "webb"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["crypted-db"]
esi-api-test = []
crypted-db = ["dep:uuid"]
puffin = ["dep:puffin"]
native-auth-flow = []

[dependencies]
chrono = "0.4"
futures = "0.3"
hyper = { version = "0.14", features = ["server", "runtime", "client", "http1"] }
hyper-tls = "0.5"
lazy_static = "1"
open = "4"
rfesi = {version = "0"}
rusqlite = { version = "0.28", features = ["bundled-sqlcipher", "backup", "blob", "sqlcipher"] }
serde = { version = "1", features = ["serde_derive"] }
tokio = { version = "1", features = ["tokio-macros", "rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.3", features = ["v4", "v5", "wasm-bindgen"], optional = true }
puffin = { version = "0.16", optional=true, default-features = false}
