[package]
name = "webb"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["crypted-db"]
esi-api-test = []
crypted-db = ["dep:uuid"]
puffin = ["dep:puffin"]
native-auth-flow = []

[dependencies]
chrono = "0.4"
futures = "0.3"
hyper = { version = "1.3.1", features = ["server", "client", "http1"] }
hyper-tls = "0.6.0"
lazy_static = "1"
open = "5.1.2"
rfesi = {version = "0"}
serde = { version = "1", features = ["serde_derive"] }
tokio = { version = "1", features = ["tokio-macros", "rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.3", features = ["v4", "v5", "wasm-bindgen"], optional = true }
puffin = { version = "0.19.0", optional=true, default-features = false}
bytes = "1.6.0"
http-body-util = "0.1.1"
hyper-util = { version = "0.1.3", features = ["full"] }


# Not Windows:
[target.'cfg(not(windows))'.dependencies]
rusqlite = { version = "0", features = ["bundled-sqlcipher", "backup", "blob", "array"] }

# Windows:
[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0", features = ["bundled-sqlcipher-vendored-openssl", "backup", "blob", "array"] }
