[package]
name = "webb"
version = "0.0.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["crypted-db"]
esi-api-test = []
crypted-db = ["dep:uuid"]
puffin = ["dep:puffin"]
native-auth-flow = []

[dependencies]
chrono = "0.4.38"
hyper = { version = "1.3.1", features = ["server", "client", "http1"] }
hyper-tls = "0.6.0"
open = "5.1.2"
rfesi = {version = "0.43.0"}
serde = { version = "1.0.204", features = ["serde_derive"] }
tokio = { version = "1.38.0", features = ["tokio-macros", "rt", "rt-multi-thread", "macros"] }
puffin = { version = "0.19.0", optional=true, default-features = false}
bytes = "1.6.0"
http-body-util = "0.1.2"
hyper-util = { version = "0.1.6", features = ["full"] }


# Not Windows:
[target.'cfg(not(windows))'.dependencies]
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher", "backup", "blob", "array"] }

# Windows:
[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher-vendored-openssl", "backup", "blob", "array"] }

#Not compiling WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.9.1", features = ["v4", "v5"], optional = true }

#compiling WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.9.1", features = ["v4", "v5", "js"], optional = true }
